istio/01-L4_proxy_external_failover/00-proxier.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: l4-proxy-se
spec:
  hosts:
    - service.ardikabs.com
  addresses:
    - 172.20.212.108 # ClusterIP Istio Egress Gateway
  endpoints:
    - address: 1.1.1.1.nip.io
      locality: ap-southeast-1
    - address: 8.8.8.8.nip.io
      locality: ap-southeast-2
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: l4-proxy-dr
spec:
  host: service.ardikabs.com
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        failover:
          - from: ap-southeast-1
            to: ap-southeast-2
    outlierDetection:
      consecutiveGatewayErrors: 3
      interval: 15s
      baseEjectionTime: 30s
